fix main alignment

--- a/css/pagestruct.css
+++ b/css/pagestruct.css
@@ -1,4 +1,6 @@
 html, body {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     max-width: 100%;
     overflow-wrap: justify;
@@ -31,7 +33,6 @@ li {
 @media only screen and (min-width: 1000px) {
     main.landing {
         justify-content: center;
-        align-items: center;
         padding-top: 1rem;
     }
 }
@@ -39,7 +40,5 @@ li {
 @media only screen and (max-width: 1024px) {
     main.landing {
         width: 90%;
-        align-items: center;
-        padding: 0rem 3%;
     }
 }
